--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
         <input type="radio" id="noparking" name="parking" value="false" checked>
         <label for="parking">Con o senza parcheggio</label>
 
+        <select name="ordina" id="order">
+            <option value="1">1 stella</option>
+            <option value="2">2 stelle</option>
+            <option value="3">3 stelle</option>
+            <option value="4">4 stelle</option>
+            <option value="5">5 stelle</option>
+        </select>
+
         <input type="submit">
     </form>
 
